<!--
 *   This program is free software: you can redistribute it and/or modify
 *   it under the terms of the GNU General Public License as published by
 *   the Free Software Foundation, either version 3 of the License, or
 *   (at your option) any later version.
 *
 *   This program is distributed in the hope that it will be useful,
 *   but WITHOUT ANY WARRANTY; without even the implied warranty of
 *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *   GNU General Public License for more details.
 *
 *   You should have received a copy of the GNU General Public License
 *   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
/*
 * DataLearner - a data-mining app for Android
 * strings.xml
 * (C) Copyright Darren Yates 2018-2019
 * Developed using a combination of Weka 3.6.15 and algorithms developed by Charles Sturt University
-->
<resources>
    <string name="str_select">Select</string>
    <string name="app_name">DataLearner</string>
    <string name="novalue">---</string>
    <string name="str_load">Load</string>
    <string name="str_ready">Ready.</string>
    <string name="str_run">Run</string>
    <string name="str_view_det">View details / confusion matrix</string>
    <string name="str_inc_class">Incorrectly Classified</string>
    <string name="str_kappa">Kappa statistic</string>
    <string name="str_mean_abs">Mean absolute error</string>
    <string name="str_root_mean">Root mean square error</string>
    <string name="str_rel_abs">Relative absolute error</string>
    <string name="str_root_rel">Root relative squared error</string>
    <string name="str_total_num">Total Number of Instances</string>
    <string name="str_label_demo" translatable="false">Demo</string>
    <string name="str_label_bayes" translatable="false">Bayes :</string>
    <string name="str_label_functions">Functions :</string>
    <string name="str_label_lazy">Lazy :</string>
    <string name="str_label_meta" translatable="false">Meta :</string>
    <string name="str_label_rules">Rules :</string>
    <string name="str_label_trees">Trees :</string>
    <string name="str_label_clust" translatable="false">Clusterers :</string>
    <string name="str_label_assoc">Associators :</string>
    <string name="str_tap_run">Tap \'Run\' to model your data:</string>
    <string name="str_inc_ten">Include 10-fold cross-validation</string>
    <string name="str_cor_class">Correctly Classified</string>
    <string name="str_sel_alg">&#8230; selected algorithm &#8230;</string>
    <string name="str_sel_opt">Selected option:</string>
    <string name="str_sel_cca">Select to classify / cluster / associate:</string>
    <string name="str_label_load">Load a Weka-format file for learning:</string>
    <string name="str_label_file">&#8230; Dataset File Summary &#8230;</string>
    <string name="str_label_btn_load">Load ARFF or CSV file</string>
    <string name="str_file_test">Data file to test:</string>
    <string name="str_alt_att">Set alternate class attribute :</string>
    <string name="str_changes">v1.1.7 - Fixed Confusion Matrix button visibility (can now see tree model after build only).
        v1.1.6 - Added full tree models for RandomForest output; added copy-paste for output to clipboard\n
        v1.1.5 - Updated message for algorithms producing error due to numeric class attribute, adding suggestion to try \'Force class to nominal\' button on Load screen.\n
        v1.1.4 - fixed bug stopping model statistics for numeric-class datasets introduced in 1.1.3.\n
        v1.1.3 - Bug fixes; UI improvements; added new \'force numeric class attribute to nominal\' feature (class attribute in a CSV file is no longer forced to nominal).\n
        v1.1.2 - Added RandomSubSpace algorithm from Weka 3.6.15\n
        v1.1.0 - Added new demo mode (includes synthetic \'rain\' dataset).\n
        v1.0.5 - Added basic MultilayerPerception model. It\'s quite slow on phone-grade hardware, but it works.\n
        v1.0.4 - Minor bug fixes.\n
        v1.0.3 - Added experimental CSV reader. DataLearner expects a header row, the class attribute must be last in the list and must be nominal type (will be forced to nominal). And a couple of bug fixes.</string>
    <string name="str_help">DataLearner works in three steps: \n1. Load a Weka-formatted ARFF file or a CSV file (header row, class attribute last in list and nominal) \n2. Swipe left and select an algorithm \n
        3. Swipe left again and tap the Run button. Not every algorithm will work with every dataset, so you may get a no-result or something weird happen - just try another algorithm, or if you have a numeric class attribute, use the \'Force class attribute to Nominal\' button on the Load screen.
        \n\n NOTE: Algorithms marked with * are able to model datasets with a numeric class attribute (Trees/REPTree, Functions/MultilayerPerceptron, Meta/Bagging)
    </string>
    <string name="intro_text">DataLearner is data-mining app powered by the Weka data-mining core (version 3.6.15) and includes algorithms sourced from Weka and the Data Science Research Unit (DSRU) at Charles Sturt University.</string>
    <string name="demo_text">DataLearner is easy to use, but if you\'re new to data-mining, this demo will help.\n\n
        We\'ve just loaded a synthetic \'rain\' dataset. It has six attributes (columns) - minTemp, maxTemp, windDirection, relHumidity, baroPressure and Rain.
        It records 500 days (rows) of weather values, grouped or \'classed\' by how much rain there was that day - none, less than 5mm, less than 20mm or greater than 20mm.\n\n
        Our job is to develop a set of rules or \'model\' that can predict whether it rained or not on a particular day by knowing just the first five weather measurements of that day.\n\n
        Our next step is tap the \'Select\' tab and choose a classification algorithm from one of six groups above the line.
        After that, press the \'Run\' tab, tap the Run button and build a model using your chosen algorithm.
        DataLearner will self-test using what\'s called \'ten-fold cross-validation\' to see how accurate the model is.
        The higher the \'correctly classified\' accuracy percentage, the better the prediction.
        You should be able to do better than 56% (that\'s the base score). Press the \'View details\' button to see the model.\n\n
        DataLearner won\'t turn you into a data scientist, but we hope it can help you on your way.
    </string>
    <string name="noconvert">Given the number of distinct values the selected class attribute has, converting this class attribute to nominal might not be the best thing. You can still choose to do so if you wish.
    </string>
    <string name="copy">You can now open up a text editor and paste the data onto a page.</string>
    <string-array name="arrayBayes">
        <item>-- none selected --</item>
        <item>BayesNet</item>
        <item>NaiveBayes</item>
    </string-array>
    <string-array name="arrayRules">
        <item>-- none selected --</item>
        <item>Conjunctive Rule</item>
        <item>Decision Table</item>
        <item>DTNB</item>
        <item>JRip</item>
        <item>OneR</item>
        <item>PART</item>
        <item>Ridor</item>
        <item>ZeroR</item>
    </string-array>
    <string-array name="arrayTrees">
        <item>-- none selected --</item>
        <item>ADTree</item>
        <item>BFTree</item>
        <item>DecisionStump</item>
        <item>ForestPA</item>
        <item>J48 (C4.5)</item>
        <item>LADTree</item>
        <item>RandomForest</item>
        <item>RandomTree</item>
        <item>*REPTree</item>
        <item>SimpleCART</item>
        <item>SysFor</item>
        <item>SPAARC</item>
    </string-array>
    <string-array name="arrayMeta">
        <item>-- none selected --</item>
        <item>AdaBoostM1</item>
        <item>*Bagging</item>
        <item>LogitBoost</item>
        <item>MultiBoostAB</item>
        <item>Random Committee</item>
        <item>RandomSubSpace</item>
        <item>Rotation Forest</item>
    </string-array>
    <string-array name="arrayLazy">
        <item>-- none selected --</item>
        <item>IBk (KNN)</item>
        <item>KStar</item>
    </string-array>
    <string-array name="arrayFunctions">
        <item>-- none selected --</item>
        <item>Logistic</item>
        <item>SimpleLogistic</item>
        <item>*MultilayerPerceptron</item>
    </string-array>
    <string-array name="arrayCluster">
        <item>-- none selected --</item>
        <item>DBSCAN</item>
        <item>EM</item>
        <item>FarthestFirst</item>
        <item>FilteredClusterer</item>
        <item>SimpleKMeans</item>
    </string-array>
    <string-array name="arrayAssociate">
        <item>-- none selected --</item>
        <item>Apriori</item>
        <item>FilteredAssociator</item>
        <item>FPGrowth</item>
    </string-array>
    <string-array name="arrayNumbers">
        <item> --- </item>
    </string-array>
    <string-array name="classType">
        <item>categorical</item>
        <item>numeric</item>
    </string-array>
</resources>
